# django_esi_auth

./: .gitignore  README.md  pyproject.toml
django_esi_auth/: admin.py  apps.py  auth.py  choices.py  client.py  exceptions.py  models.py  signals.py  urls.py  utils.py  views.py
django_esi_auth/management/commands/: test_esi.py
django_esi_auth/migrations/: 0001_initial.py  0002_create_token.py  0003_alter_eveentity_eve_entity_type.py  0004_alter_eveentity_eve_entity_name.py  0005_alter_eveentity_eve_entity_id.py
django_esi_auth/templatetags/: eve_sso_tags.py
